fix nowrap

--- a/css/app.css
+++ b/css/app.css
@@ -58,4 +58,5 @@ input, button{
 
 .textInput{
     font-size: 12px;
+    white-space: nowrap;
 }
